codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__auth__tests__cyrus_forced_pick_mode_renders.snap
---
source: tui/src/onboarding/auth.rs
expression: terminal.backend()
---
  Set up cyrus to run codex on the plan you already pay for

> 1. cyrus (best of both worlds)
     Run codex on the ChatGPT plan you already pay for

  Press enter to continue
