codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__auth__tests__hannah_montana_configured_renders.snap
---
source: tui/src/onboarding/auth.rs
assertion_line: 1492
expression: terminal.backend()
---
✓ Hannah Montana mode

  Best of both worlds - using the shadow provider. No sign-in, no
limits.
