codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__auth__tests__hannah_montana_setup_renders_error_with_retry.snap
---
source: tui/src/onboarding/auth.rs
expression: terminal.backend()
---
  Setting up cyrus

  ✓ Loading secrets — loaded
  ⏳ Connecting Chrome
    Opening tunnel
    Starting stack
    Wiring the ChatGPT connector
    Writing Codex config

  Failed to launch cyrus: program not found

  Press enter to retry
