codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__auth__tests__hannah_montana_setup_renders_mid_run.snap
---
source: tui/src/onboarding/auth.rs
expression: terminal.backend()
---
  Setting up cyrus

  ✓ Preparing credentials — loaded
  ⏳ Connecting to Chrome
    Opening the public tunnel
    Starting local servers
    Wiring the ChatGPT connector
    Configuring codex
