codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__auth__tests__tunnel_pick_ngrok_entry_renders.snap
---
source: tui/src/onboarding/auth.rs
expression: terminal.backend()
---
> Paste your reserved ngrok domain

  e.g. your-name.ngrok-free.app


╭ngrok domain────────────────────────────────────────────────────────╮
│your-name.ngrok-free.app                                            │
╰────────────────────────────────────────────────────────────────────╯
  Press enter to continue · esc to go back
